Fix for code wrapping

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -157,7 +157,7 @@ strong code {
 }
 
 .post-content>ul>li>pre,
-.post-content>ol>li>pre,
+.post-content>ol>li>ul>li>.highlight>pre,
 .post-content>ul>li>.highlight>pre,
 .post-content>.highlight>pre,
 .post-content>pre {
